<resources>
    <string name="app_name">ToDo</string>
    <string name="new_task">New Task</string>
    <string name="task">Task</string>
    <string name="important">Important</string>
    <string name="trivial">Trivial</string>
    <string name="add">Add task</string>
    <string name="category">Category</string>
    <string name="theme">Toggle teal/purple themes</string>
    <string name="removeAll">Remove all tasks</string>
    <string name="markAll">Mark all tasks as completed</string>
    <string name="unmarkAll">Mark all tasks as pending</string>
    <string name="remove">Remove</string>
    <string name="mark">Mark as completed/pending</string>
    <string name="edit">Edit</string>

    <string-array name="categories">
        <item>Studying</item>
        <item>Shopping</item>
        <item>Workout</item>
        <item>Hobbies</item>
        <item>Self-improvement</item>
        <item>Work</item>
    </string-array>
</resources>